# NewsClustering

./: .gitignore
data/: ES_stopList.txt  tuits.txt
data/news/: newC00001_001.ES.txt  newC00001_002.ES.txt  newC00001_003.ES.txt  newC00001_004.ES.txt  newC00001_005.ES.txt  newC00001_006.ES.txt  newC00001_008.ES.txt  newC00001_009.ES.txt  newC00002_001.ES.txt  newC00002_002.ES.txt  newC00002_003.ES.txt  newC00002_004.ES.txt  newC00002_005.ES.txt  newC00003_001.ES.txt  newC00003_002.ES.txt  newC00004_001.ES.txt  newC00004_002.ES.txt  newC00004_003.ES.txt  newC00005_001.ES.txt  newC00005_002.ES.txt  newC00005_003.ES.txt  newC00005_004.ES.txt  newC00006_001.ES.txt  newC00006_002.ES.txt  newC00006_003.ES.txt  newC00006_004.ES.txt  newC00006_005.ES.txt  newC00006_006.ES.txt  newC00006_007.ES.txt  newC00007_001.ES.txt  newC00007_002.ES.txt  newC00008_001.ES.txt  newC00008_002.ES.txt  newC00009_001.ES.txt  newC00009_002.ES.txt  newC00009_003.ES.txt  newC00009_004.ES.txt  newC00009_005.ES.txt  newC00010_001.ES.txt  newC00010_002.ES.txt  (+8 more)
data/news_json/: newC00001_001.ES.json  newC00001_002.ES.json  newC00001_003.ES.json
diagrams/: diagrama_clases_TAREAS_1_2_3.xmi  diagrama_clases_TAREAS_4.xmi  diagrama_clases_TAREAS_5.xmi  diagrama_clases_TAREAS_6.xmi
src/: Analizador.cpp  Analizador.h  CMakeLists.txt  ClusterWriter.cpp  ClusterWriter.h  ClusteringCriterion.h  Clusterizer.cpp  Clusterizer.h  ClusterizerFactory.cpp  ClusterizerFactory.h  ClusterizerOptionParser.cpp  ClusterizerOptionParser.h  ClusterizerOptions.h  EntidadNombrada.cpp  EntidadNombrada.h  ExclusionList.h  ExclusionListFromFile.cpp  ExclusionListFromFile.h  InvalidDirectoryException.cpp  InvalidDirectoryException.h  InvalidLocationException.cpp  InvalidLocationException.h  JsonClusterWriter.cpp  JsonClusterWriter.h  Main.cpp  MostMentionedEntityClusteringCriterion.cpp  MostMentionedEntityClusteringCriterion.h  News.cpp  News.h  NewsCluster.cpp  NewsCluster.h  NewsDiscriminator.cpp  NewsDiscriminator.h  NewsReader.cpp  NewsReader.h  NewsReaderFromJson.cpp  NewsReaderFromJson.h  NewsReaderFromPlainText.cpp  NewsReaderFromPlainText.h  NewsReaderFromTuit.cpp  (+21 more)
test/: CMakeLists.txt  ClusteringCriterionMock.h  ClusterizerOptionParserTestSuite.cpp  ClusterizerTestSuite.cpp  ExclusionListMock.h  ExclusionListTestSuite.cpp  JsonClusterWriterTestSuite.cpp  MostMentionedEntityClusteringCriterionTestSuite.cpp  NewsClusterTestSuite.cpp  NewsDiscriminatorTestSuite.cpp  NewsMock.h  NewsReaderFromPlainTextTestSuite.cpp  NewsReaderFromTuitTestSuite.cpp  NewsReaderMock.h  NewsReaderTestSuite.cpp  NewsTestSuite.cpp  NewspaperNewsTestSuite.cpp  PlainTextClusterWriterTestSuite.cpp  RealClusterizerTestSuite.cpp  ThematicSimilarityClusteringCriterionTestSuite.cpp  TuitReaderTestSuite.cpp  TwitterNewsTestSuite.cpp  compileAndExecuteUnitTest.sh  mostMentionedEntity.sh
test/dummyData/: litteSpanishStopList.txt  litteStopList.txt
test/dummyData/dummyJsonNews/: news1.json  news2.json
test/dummyData/dummyNews/: news1.txt  news2.txt
test/dummyData/dummyTwitterNews/: dummy.json
